Onboarding v2 update, version bump
Covers changes mentioned here : https://www.figma.com/file/alqD10Zexb7M08R6gdd956/flowchart?node-id=97%3A2149&t=NZXQKn1Ov8U7oRXI-4